--- a/android/app/src/main/res/layout/fragment_beer_create.xml
+++ b/android/app/src/main/res/layout/fragment_beer_create.xml
@@ -1,97 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".views.beerCreate.BeerCreateFragment"
-             android:configChanges="orientation|screenSize|keyboardHidden"
->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="8dp"
+    app:cardUseCompatPadding="true"
+    app:cardBackgroundColor="@color/md_blue_100">
 
     <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/sv_create_beer">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/sv_create_beer"
-        >
-        <RelativeLayout
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/et_name"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/holo_blue_dark"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:hint="@string/beer_name"/>
 
             <EditText
-                    android:id="@+id/et_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:hint="@string/beer_name"/>
-
-            <EditText
-                    android:id="@+id/et_brewery"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/brewery"
-                    android:layout_below="@+id/et_name"
-                    android:layout_marginTop="13dp" />
+                android:id="@+id/et_brewery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/brewery"
+                android:layout_below="@+id/et_name"
+                android:layout_marginTop="13dp" />
 
             <Spinner
-                    android:id="@+id/sp_country_of_origin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/select_country"
-                    android:layout_centerHorizontal="true"
-                    android:textColorHint="#05ab9a"
-                    android:layout_below="@+id/et_brewery"
-                    android:layout_marginTop="13dp"/>
+                android:id="@+id/sp_country_of_origin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/select_country"
+                android:layout_centerHorizontal="true"
+                android:textColorHint="#05ab9a"
+                android:textColor="#000000"
+                android:layout_below="@+id/et_brewery"
+                android:layout_marginTop="13dp"/>
 
             <EditText
-                    android:id="@+id/et_abv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/abv"
-                    android:layout_below="@+id/sp_country_of_origin"
-                    android:layout_marginTop="13dp"/>
+                android:id="@+id/et_abv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/abv"
+                android:layout_below="@+id/sp_country_of_origin"
+                android:layout_marginTop="13dp"/>
 
             <EditText
-                    android:id="@+id/et_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/description"
-                    android:layout_below="@+id/et_abv"
-                    android:layout_marginTop="13dp"/>
+                android:id="@+id/et_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/description"
+                android:layout_below="@+id/et_abv"
+                android:layout_marginTop="13dp"/>
 
             <EditText
-                    android:id="@+id/et_style"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/style"
-                    android:layout_below="@+id/et_description"
-                    android:layout_marginTop="13dp"/>
-
-
-            <EditText
-                    android:id="@+id/et_tag"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/tag"
-                    android:layout_below="@+id/et_style"
-                    android:layout_marginTop="13dp"/>
+                android:id="@+id/et_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/style"
+                android:layout_below="@+id/et_description"
+                android:layout_marginTop="13dp"/>
 
 
             <EditText
-                    android:id="@+id/et_imageUrl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/enter_image_url"
-                    android:layout_below="@+id/et_tag"
-                    android:layout_marginTop="13dp"/>
+                android:id="@+id/et_tag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/tag"
+                android:layout_below="@+id/et_style"
+                android:layout_marginTop="13dp"/>
+
+
+            <EditText
+                android:id="@+id/et_imageUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_image_url"
+                android:layout_below="@+id/et_tag"
+                android:layout_marginTop="13dp"/>
 
             <Button
-                    android:id="@+id/btn_save"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/save"
-                    android:layout_below="@+id/et_imageUrl"
-                    android:layout_marginTop="15dp"/>
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/save"
+                android:layout_below="@+id/et_imageUrl"
+                android:layout_marginTop="15dp"/>
         </RelativeLayout>
     </ScrollView>
 
@@ -100,4 +100,4 @@
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:background="?android:attr/listDivider" />
-</FrameLayout>
+</android.support.v7.widget.CardView>
