--- a/android/app/src/main/res/layout/activity_beer_create.xml
+++ b/android/app/src/main/res/layout/activity_beer_create.xml
@@ -13,7 +13,9 @@
         <android.support.v7.widget.Toolbar
                 android:id="@+id/drawer_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"/>
+                android:layout_height="40dp"
+
+            />
 
         <FrameLayout
                 android:id="@+id/content"
