--- a/android/app/src/main/res/layout/fragment_beer_details.xml
+++ b/android/app/src/main/res/layout/fragment_beer_details.xml
@@ -1,125 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".views.beerDetails.BeerDetailsFragment">
-    <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/white"
-                android:layout_margin="8dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".views.beerDetails.BeerDetailsFragment">
 
-            <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="beer_title"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold"
-                    android:layout_alignParentTop="true"
-                    android:textSize="25sp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:background="@color/colorWindow">
+
+            <ProgressBar
+                android:id="@+id/prb_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone" />
 
             <ImageView
-                    android:id="@+id/iv_beer_details"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_below="@id/tv_name"/>
+                android:id="@+id/iv_beer_details"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="10dp"
+                android:contentDescription="@string/iv_picture"
+                android:scaleType="fitXY" />
 
-            <TextView
-                    android:id="@+id/tv_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/iv_beer_details"
-                    android:scrollbars="vertical"
-                    android:text="Description"
-                    android:textColor="@android:color/black"
-                    android:textSize="19sp"/>
+            <LinearLayout
+                android:id="@+id/layout_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="150dp"
+                android:orientation="horizontal">
 
-            <TextView
-                    android:id="@+id/tv_brewery"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_description"
-                    android:scrollbars="vertical"
-                    android:text="Brewery"
-                    android:textColor="@android:color/black"
-                    android:textSize="19sp"/>
-
-            <TextView
-                    android:id="@+id/tv_country"
+                <com.getbase.floatingactionbutton.FloatingActionsMenu
+                    android:id="@+id/fam_image_options_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_brewery"
-                    android:textColor="@android:color/black"
-                    android:text="Country"
-                    android:textSize="19sp"/>
+                    android:layout_alignTop="@+id/layout_image"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="3dp"
+                    app:fab_addButtonColorNormal="@color/colorAccent"
+                    app:fab_addButtonColorPressed="@color/colorAccent"
+                    app:fab_addButtonPlusIconColor="@color/colorWhite"
+                    app:fab_addButtonSize="mini"
+                    app:fab_expandDirection="up">
+
+                    <com.getbase.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/fab_change_picture"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        app:fab_colorNormal="@color/colorAccent"
+                        app:fab_colorPressed="@color/colorAccent"
+                        app:fab_icon="@drawable/ic_photo_library_black_24dp"
+                        app:fab_size="mini" />
+
+                    <com.getbase.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/fab_take_picture"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        app:fab_colorNormal="@color/colorAccent"
+                        app:fab_colorPressed="@color/colorAccent"
+                        app:fab_icon="@drawable/ic_photo_camera_black_24dp"
+                        app:fab_size="mini" />
+
+                </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+            </LinearLayout>
 
             <TextView
-                    android:id="@+id/tv_ABV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_country"
-                    android:textColor="@android:color/black"
-                    android:text="ABV"
-                    android:textSize="19sp"/>
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="217dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/tv_beer_name"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
-                    android:id="@+id/tv_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_ABV"
-                    android:textColor="@android:color/black"
-                    android:text="Style"
-                    android:textSize="19sp"/>
+                android:id="@+id/tv_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_name"
+                android:layout_marginStart="217dp"
+                android:layout_marginTop="14dp"
+                android:text="@string/tv_style"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
 
             <TextView
-                    android:id="@+id/tv_tag"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_style"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="19sp"
-                    android:text="Tag"
-                    android:color="@color/md_red_900"
-                    android:textStyle="bold"/>
+                android:id="@+id/tv_ABV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_style"
+                android:layout_marginStart="217dp"
+                android:layout_marginTop="14dp"
+                android:text="@string/tv_alcohol"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
 
             <TextView
-                    android:id="@+id/tv_beer_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_style"
-                    android:textColor="@android:color/black"
-                    android:text="Name"
-                    android:textSize="19sp"/>
+                android:id="@+id/tv_brewery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv_beer_details"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="14dp"
+                android:text="@string/tv_brewery"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_country"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_brewery"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="14dp"
+                android:text="@string/tv_country"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_country"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="14dp"
+                android:scrollbars="vertical"
+                android:text="@string/tv_description"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_description"
+                android:layout_alignParentRight="true"
+                android:color="@color/md_red_900"
+                android:text="@string/tv_tag"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <RatingBar
-                    android:id="@+id/rating_beer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_beer_name"
-                    style="?android:attr/ratingBarStyle"
-                    android:numStars="5"
-                    android:stepSize="0.1"
-                    android:isIndicator="true"
-                    android:outlineAmbientShadowColor="@color/md_yellow_500"/>
+                android:id="@+id/rating_beer"
+                style="?android:attr/ratingBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_tag"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:outlineAmbientShadowColor="@color/md_yellow_500"
+                android:stepSize="0.1" />
 
             <TextView
-                    android:id="@+id/tv_rate_beer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_beer_name"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/md_light_green_900"
-                    android:contextClickable="true"
-                    android:text="Rate beer"
-                    android:textSize="22sp"/>
-
+                android:id="@+id/tv_rate_beer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_tag"
+                android:layout_alignParentRight="true"
+                android:contextClickable="true"
+                android:text="@string/tv_rate_beer"
+                android:textColor="@color/md_light_green_900"
+                android:textSize="22sp" />
 
         </RelativeLayout>
     </ScrollView>
