--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574b</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimary">#446AB3</color>
+    <color name="colorPrimaryDark">#1E448C</color>
+    <color name="colorAccent">#1d3479</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey">#D3D3D3</color>
+    <color name="colorLightPurple">#5070ab</color>
+    <color name="colorWindow">#d9dbe7</color>
 </resources>
