--- a/android/app/src/main/res/xml/pref_headers.xml
+++ b/android/app/src/main/res/xml/pref_headers.xml
@@ -1,10 +1,10 @@
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- These settings headers are only used on tablets. -->
-    <header
-            android:fragment="com.beertag.android.views.Login.LoginActivity$GeneralPreferenceFragment"
-            android:title="@string/username">
-        <extra android:name="Username" android:value="Login"></extra>
-    </header>
+    <!--<header-->
+            <!--&lt;!&ndash;android:fragment="com.beertag.android.views.login.LoginActivity$GeneralPreferenceFragment"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:title="@string/username">&ndash;&gt;-->
+        <!--&lt;!&ndash;<extra android:name="Username" android:value="Login"></extra>&ndash;&gt;-->
+    <!--</header>-->
 
 </preference-headers>
