--- a/android/app/src/main/res/layout/fragment_beer_create.xml
+++ b/android/app/src/main/res/layout/fragment_beer_create.xml
@@ -2,13 +2,11 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:targetApi="23"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
-    app:cardBackgroundColor="@color/md_blue_100">
+    app:cardBackgroundColor="@color/colorLightBlue">
 
     <ScrollView
         android:id="@+id/sv_create_beer"
@@ -17,7 +15,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ProgressBar
@@ -43,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@+id/title"
+                android:layout_below="@+id/tv_title"
                 android:layout_marginTop="30dp">
 
                 <TextView
@@ -72,8 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@+id/layout_beer_name"
-                >
+                android:layout_below="@+id/layout_beer_name">
 
                 <TextView
                     android:layout_marginTop="13dp"
@@ -115,12 +112,12 @@
                     android:id="@+id/sp_country_of_origin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
                     android:hint="@string/hint_select_country_of_origin"
                     android:textColor="@color/md_blue_800"
                     app:ms_background_color="@color/md_blue_100"
+                    android:outlineSpotShadowColor="@color/colorAccent"
                     android:textColorHint="@color/material_drawer_hint_text" />
             </LinearLayout>
 
@@ -228,7 +225,6 @@
                     android:id="@+id/sp_tag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="10dp"
                     android:hint="@string/hint_you_can_select_tag"
@@ -258,7 +254,6 @@
                     android:id="@+id/fab_new_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
                     android:layout_marginEnd="3dp"
                     android:layout_marginBottom="3dp"
                     app:fab_colorNormal="@color/colorAccent"
@@ -271,7 +266,6 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginStart="20dp"
-                    android:layout_centerHorizontal="true"
                     android:contentDescription="@string/iv_push_button_to_make_picture"
                     />
             </LinearLayout>
