--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,11 +25,12 @@
             <ImageView
                 android:id="@+id/iv_home_user_image"
                 android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:contentDescription="@string/et_user_picture"
                 android:scaleType="fitXY"
                 android:src="@drawable/defaultuserpicture"
-                android:layout_height="wrap_content" />
+                 />
 
 
             <TextView
@@ -37,8 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_home_user_image"
                 android:layout_centerHorizontal="true"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="60dp"
                 android:textColor="@color/colorAccent"
                 android:textSize="24sp" />
         </RelativeLayout>
