--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#446AB3</color>
     <color name="colorPrimaryDark">#1E448C</color>
     <color name="colorAccent">#1d3479</color>
+    <color name="colorLightBlue">#bbdefb</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#D3D3D3</color>
