--- a/android/app/src/main/res/layout/fragment_beer_create.xml
+++ b/android/app/src/main/res/layout/fragment_beer_create.xml
@@ -117,6 +117,7 @@
                     android:hint="@string/hint_select_country_of_origin"
                     android:textColor="@color/md_blue_800"
                     app:ms_background_color="@color/md_blue_100"
+                    android:shadowColor="@color/colorAccent"
                     android:outlineSpotShadowColor="@color/colorAccent"
                     android:textColorHint="@color/material_drawer_hint_text" />
             </LinearLayout>
