--- a/android/app/src/main/res/layout/fragment_my_beers_list.xml
+++ b/android/app/src/main/res/layout/fragment_my_beers_list.xml
@@ -6,28 +6,43 @@
              tools:context=".views.beersList.BeersListFragment">
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ProgressBar
-                android:id="@+id/loading"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerInParent="true"
-                android:visibility="gone"/>
+            android:id="@+id/loading"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
-        <EditText
-                android:id="@+id/et_filter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/et_enter_to_search"/>
+        <Button
+            android:id="@+id/btn_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="20dp"
+            android:layout_toStartOf="@+id/btn_want_drink"
+            android:text="All my Beers"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/btn_want_drink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="20dp"
+            android:text="My favorit beers"
+            android:textSize="12sp" />
+
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_beers"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/et_filter"
-                android:padding="4dp"/>
+            android:id="@+id/rv_beers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/btn_all"
+            android:padding="4dp" />
     </RelativeLayout>
 
 </FrameLayout>
