--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="colorGrey">#D3D3D3</color>
     <color name="colorLightPurple">#5070ab</color>
     <color name="colorWindow">#d9dbe7</color>
+
+    <color name="tab_unselected_text_color">#9e9e9e</color>
+    <color name="tab_selected_text_color">#1d3479</color>
+
 </resources>
