--- a/android/app/src/main/res/layout/fragment_my_beers_list.xml
+++ b/android/app/src/main/res/layout/fragment_my_beers_list.xml
@@ -23,7 +23,8 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="20dp"
             android:layout_toStartOf="@+id/btn_want_drink"
-            android:text="All my Beers"
+            android:background="@color/colorLightBlue"
+            android:text=" All my Beers "
             android:textSize="12sp" />
 
         <Button
@@ -33,7 +34,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="20dp"
-            android:text="My favorit beers"
+            android:background="@color/colorLightBlue"
+            android:text=" My favorit beers "
             android:textSize="12sp" />
 
 
